Fix long text posts overflowing (#87)

--- a/src/Component/post.module.css
+++ b/src/Component/post.module.css
@@ -24,6 +24,7 @@
 
 .postText {
   font-size: 30px;
+  word-break: break-word;
 }
 
 .postInput {
